--- a/app/src/main/res/layout/fragment_gtt.xml
+++ b/app/src/main/res/layout/fragment_gtt.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,4 +13,11 @@
         android:id="@+id/Recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</FrameLayout>
+<com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/fab"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentEnd="true"
+    android:src="@drawable/baseline_history_edu_24" />
+</RelativeLayout>
